fixed story on mobile

--- a/src/components/Content/Story/index.css
+++ b/src/components/Content/Story/index.css
@@ -81,10 +81,8 @@
 
 @media screen and (max-width: 1100px) {
   .grid-container {
-    width: 90%;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: 350px 1fr 250px 100px 1fr;
-    width: 450px;
   }
 
   #couple {
